screen share test v1.1

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -23,11 +23,17 @@
     <script type="text/javascript" src="/js/vendor/jquery.plainmodal.js"></script>
     <script type="text/javascript" src="/js/vendor/chance.min.js"></script>
     <script type="text/javascript" src="/js/vendor/filesaver.js"></script>
+    <!-- <script type="text/javascript" src="/js/dist/RTCMultiConnection.min.js"></script> -->
     <script type="text/javascript" src="/js/app.js"></script>
     <script type="text/javascript" src="/js/error.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
     <script type="text/javascript" src="/js/socket.io.js"></script>
     <script type="text/javascript" src="/js/easyrtc.js"></script>
     <script type="text/javascript" src="/js/vtc.js"></script>
+    
+    <script type="text/javascript" src="/js/RTCMultiConnection.js"></script>
+
+    <script type="text/javascript" src="/js/getHTMLMediaElement.js"></script>
+
   </body>
 </html>
