--- a/front/public/index.html
+++ b/front/public/index.html
@@ -31,9 +31,9 @@
     <script type="text/javascript" src="/js/easyrtc.js"></script>
     <script type="text/javascript" src="/js/vtc.js"></script>
     
-    <script type="text/javascript" src="/js/RTCMultiConnection.js"></script>
+    <!-- <script type="text/javascript" src="/js/RTCMultiConnection.js"></script>
 
-    <script type="text/javascript" src="/js/getHTMLMediaElement.js"></script>
+    <script type="text/javascript" src="/js/getHTMLMediaElement.js"></script> -->
 
   </body>
 </html>
